Revision history for DBIx::Class

### Unreleased changes from topic branch
    * Fixes
        - Correctly recognize root source unqualified columns when
          resolving right-side ordered limited prefetch
        - Even more robust behavior of GenericSubQuery limit dialect
        - Stop Sybase ASE storage from generating invalid SQL in subselects
          when a limit without offset is encountered


0.08210 2013-04-04 15:30 (UTC)
    * New Features / Changes
        - Officially deprecate the 'cols' and 'include_columns' resultset
          attributes
        - Remove ::Storage::DBI::sth() deprecated in 0.08191

    * Fixes
        - Work around a *critical* bug with potential for data loss in
          DBD::SQLite - RT#79576
        - Audit and correct potential bugs associated with braindead reuse
          of $1 on unsuccessful matches
        - Fix incorrect warning/exception originator reported by carp*() and
          throw_exception()

0.08242-TRIAL (EXPERIMENTAL BETA RELEASE) 2013-03-10 14:44 (UTC)
    * New Features / Changes
        - Prefetch with limit on right-side ordered resultsets now works
          correctly (via aggregated grouping)
        - Changing the result_class of a ResultSet in progress is now
          explicitly forbidden. The behavior was undefined before, and
          would result in wildly differing outcomes depending on $rs
          attributes.
        - Scale back validation of the 'as' attribute - in the field
          there are legitimate-ish uses of a inflating into an apparently
          invalid relationship graph
        - Warn in case of iterative collapse being upgraded to an eager
          cursor slurp
        - No longer order the insides of a complex prefetch subquery,
          unless required to satisfy a limit

    * Fixes
        - Properly consider unselected order_by criteria during complex
          subqueried prefetch
        - Properly support "MySQL-style" left-side group_by with prefetch